--- a/Worksheet_Functions1.ipynb
+++ b/Worksheet_Functions1.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Copy of Worksheet - Functions1.ipynb",
+      "name": "Worksheet - Functions1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
       "include_colab_link": true
@@ -145,18 +145,40 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "0vusDz8YQMdB"
+        "id": "0vusDz8YQMdB",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f486a1a6-3aa5-418e-f9da-1cd1b580583a"
       },
       "source": [
         "def get_username():\n",
         "  # add your code below here\n",
+        "  username = str(input(\"Enter a username: \"))\n",
+        "  username_upper = username.upper()\n",
+        "  if username_upper == \"ADMINUSER1\":\n",
+        "    print(\"Valid user\")\n",
+        "  else:\n",
+        "    print(\"Invalid username\")\n",
         "\n",
+        "print(get_username())\n",
         "\n",
-        "\n",
-        "print(get_username())"
+        "get_username()"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Enter a username: admin\n",
+            "Invalid username\n",
+            "None\n",
+            "Enter a username: ADMINUSER1\n",
+            "Valid user\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -203,13 +225,55 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "GUjr6u9sRfrh"
+        "id": "GUjr6u9sRfrh",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6d62b161-a59f-4e8c-f7c2-45b1a4cb4ebe"
       },
       "source": [
-        ""
+        "def get_credentials():\n",
+        "  \n",
+        "  # Ask for username and password\n",
+        "  username = str(input(\"Enter a username: \"))\n",
+        "  username_upper = username.upper()\n",
+        "  password = str(input(\"Enter a password: \"))\n",
+        "  \n",
+        "  # Set up if and elif statements\n",
+        "  # username correct and password greater than/equal to 8 characters\n",
+        "  if username == \"AdminUser1\" and len(password) >= 8:\n",
+        "    print(\"Credentials accepted\")\n",
+        "  \n",
+        "  # If username is incorrect but password length is accepted\n",
+        "  elif username != \"AdminUser1\":\n",
+        "    print(\"Invalid user\")\n",
+        "  \n",
+        "  # If username is correct but password length not accepted\n",
+        "  elif len(password) < 8:\n",
+        "    print(\"Password too short\")\n",
+        "\n",
+        "get_credentials()\n",
+        "get_credentials()\n",
+        "get_credentials()"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Enter a username: AdminUser1\n",
+            "Enter a password: abc999def\n",
+            "Credentials accepted\n",
+            "Enter a username: AdminUser1\n",
+            "Enter a password: abc\n",
+            "Password too short\n",
+            "Enter a username: User1\n",
+            "Enter a password: abc999def\n",
+            "Invalid user\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -218,7 +282,7 @@
       },
       "source": [
         "---\n",
-        "### Exercise 3 - round to given dp\n",
+        "### Exercise 4 - round to given dp\n",
         "\n",
         "Write a function called **get_rounded_float()** which will:  \n",
         "\n",
@@ -246,13 +310,33 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "AHKffkJbTWxS"
+        "id": "AHKffkJbTWxS",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8ce0ef20-4bf5-42c7-d4c7-16dfc48cae07"
       },
       "source": [
-        ""
+        "def get_rounded_float():\n",
+        "  number = float(input(\"Enter a decimal number: \"))\n",
+        "  places = int(input(\"Enter a number of places to round to: \"))\n",
+        "  number = round(number, places)\n",
+        "  print(number)\n",
+        "\n",
+        "get_rounded_float()"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Enter a decimal number: 3.14159\n",
+            "Enter a number of places to round to: 2\n",
+            "3.14\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -261,7 +345,7 @@
       },
       "source": [
         "---\n",
-        "### Exercise 4 - round or not\n",
+        "### Exercise 5 - round or not\n",
         "\n",
         "Write a function called **get_rounded_float()** which will:  \n",
         "\n",
@@ -291,13 +375,43 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "kzLHRud6T9Lo"
+        "id": "kzLHRud6T9Lo",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "679441cc-66f6-4486-b5ce-9c4ae35a0053"
       },
       "source": [
-        ""
+        "def get_rounded_float():\n",
+        "  \n",
+        "  # Ask for a decimal number\n",
+        "  number = float(input(\"Enter a decimal number: \"))\n",
+        "  \n",
+        "  # Ask whether to round number or not\n",
+        "  round_number = str(input(\"Would you like to round the number? (Y or N)\"))\n",
+        "  \n",
+        "  # Set up if statement\n",
+        "  if round_number == \"Y\":\n",
+        "    places = int(input(\"How many places would you like to round the number to? \"))\n",
+        "    print(round(number, places))\n",
+        "  else:\n",
+        "    print(number)\n",
+        "\n",
+        "get_rounded_float()"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Enter a decimal number: 3.14159\n",
+            "Would you like to round the number? (Y or N)Y\n",
+            "How many places would you like to round the number to? 3\n",
+            "3.142\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -306,7 +420,7 @@
       },
       "source": [
         "---\n",
-        "### Exercise 5 - random number and places\n",
+        "### Exercise 6 - random number and places\n",
         "\n",
         "Write a function called **generate_rounded_float()** which will:  \n",
         "\n",
@@ -319,28 +433,55 @@
         "*  print `places`\n",
         "*  return the `number` rounded to the given number of `places`\n",
         "\n",
-        "Note:  The calling program will print the number.  \n",
-        "\n",
-        "Example input:  \n",
-        "3.14159  \n",
-        "Y  \n",
-        "3\n",
-        "\n",
-        "Expected output:  \n",
-        "3.142\n",
-        "\n",
-        "Test input:  \n",
-        "98.6666666666666  \n",
-        "N\n",
-        "\n",
-        "Expected output:  \n",
-        "98.6666666666666 "
+        "Note:  The calling program will print the number.  "
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "c5ufi-U-VBB5"
+        "id": "c5ufi-U-VBB5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "68188fe1-cd0a-43c8-f2aa-104ad89cd483"
+      },
+      "source": [
+        "def generate_rounded_float():\n",
+        "  \n",
+        "  # Import functions from random\n",
+        "  from random import uniform, randint\n",
+        "\n",
+        "  # Generate random decimal between 1 and 10 using the uniform function\n",
+        "  number = uniform(1, 10)\n",
+        "  # Print the number\n",
+        "  print(number)\n",
+        "\n",
+        "  # Generate random integer places between 1 and 10 using randint function\n",
+        "  places = randint(1, 4)\n",
+        "  # Print places\n",
+        "  print(places)\n",
+        "  \n",
+        "  print(round(number, places))\n",
+        "\n",
+        "generate_rounded_float()"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "6.744916729368711\n",
+            "1\n",
+            "6.7\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bcaqyWRsv96a"
       },
       "source": [
         ""
