--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -107,7 +107,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b82483d9-d583-4758-990d-8fdabff3a0f6"
+        "outputId": "5727a6ca-b256-4542-d82e-915a2f5ceca4"
       },
       "source": [
         "import numpy as np\n",
@@ -119,7 +119,7 @@
         "num_list = [3, 6, 2, 5, 8, 6]\n",
         "make_array(num_list)"
       ],
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -168,23 +168,24 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e6d29ba5-f8a2-41aa-f460-0fa54c236dfa"
+        "outputId": "e4156acf-3195-4ecd-d6fe-d64348842ac6"
       },
       "source": [
         "def small_matrix(num_list):\n",
         "  new_matrix = np.array(num_list, np.int16)\n",
-        "  print(new_matrix)\n",
+        "  for i in new_matrix:\n",
+        "    print(i)\n",
         "\n",
         "num_list = [[31112, 32321, 24567],[456, 324, 789]]\n",
         "small_matrix(num_list)"
       ],
-      "execution_count": 4,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "[[31112 32321 24567]\n",
-            " [  456   324   789]]\n"
+            "[31112 32321 24567]\n",
+            "[456 324 789]\n"
           ],
           "name": "stdout"
         }
@@ -217,24 +218,25 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9849d326-b849-4348-eaf2-2214aa77f810"
+        "outputId": "e40aa49f-cd5b-435f-bcd6-3925719dc288"
       },
       "source": [
         "def numpy_array(num_list):\n",
         "  new_matrix = np.array(num_list)\n",
-        "  print(new_matrix)\n",
+        "  for i in new_matrix:\n",
+        "    print(i)\n",
         "\n",
         "num_list = ([1,2,3],[4,5,6],[7,8,9])\n",
         "numpy_array(num_list)"
       ],
-      "execution_count": 9,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "[[1 2 3]\n",
-            " [4 5 6]\n",
-            " [7 8 9]]\n"
+            "[1 2 3]\n",
+            "[4 5 6]\n",
+            "[7 8 9]\n"
           ],
           "name": "stdout"
         }
@@ -268,26 +270,27 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e5b5cbc1-b0fa-49df-ff58-77513a8daa22"
+        "outputId": "98f64c2d-5c80-4888-9c73-915f6e1079d9"
       },
       "source": [
         "def numpy_array_two(num_list):\n",
         "  new_matrix = np.array(num_list)\n",
-        "  print(new_matrix)\n",
+        "  for i, a in new_matrix:\n",
+        "    print(i)\n",
+        "    print(a)\n",
         "\n",
         "num_list = [[[1,2],[3,4]],[[5,6],[7,8]]]\n",
-        "numpy_array_two(num_list)"
+        "numpy_array_two(num_list,)"
       ],
-      "execution_count": 13,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "[[[1 2]\n",
-            "  [3 4]]\n",
-            "\n",
-            " [[5 6]\n",
-            "  [7 8]]]\n"
+            "[1 2]\n",
+            "[3 4]\n",
+            "[5 6]\n",
+            "[7 8]\n"
           ],
           "name": "stdout"
         }
@@ -348,7 +351,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "55637555-1427-4a2d-c360-d76ab64be010"
+        "outputId": "739d86f2-6d7c-49af-ad04-793f58a2392b"
       },
       "source": [
         "def print_array_shape():\n",
@@ -359,7 +362,7 @@
         "\n",
         "print_array_shape()"
       ],
-      "execution_count": 23,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -393,7 +396,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6ceb8ed1-9b13-4de1-c354-0e7269d03943"
+        "outputId": "ebdb72c7-8ccb-46ad-f540-52ff9bcd227b"
       },
       "source": [
         "def array_slices():\n",
@@ -404,7 +407,7 @@
         "\n",
         "array_slices()"
       ],
-      "execution_count": 27,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -444,7 +447,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8e3ea9a4-8d1d-4b47-9c37-aab49257b467"
+        "outputId": "d3bab649-9959-4688-e9a0-3389c906351c"
       },
       "source": [
         "import numpy as np\n",
@@ -455,11 +458,11 @@
         "  # First part specifies the row index, second part specifies the column\n",
         "  print(num_array[1,0])\n",
         "  print(num_array[0:2])\n",
-        "  print(num_array[1:3, -2:])\n",
+        "  print(*num_array[1:3, -2:])\n",
         "\n",
         "slice_rows_cols()"
       ],
-      "execution_count": 39,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
@@ -467,8 +470,7 @@
             "5\n",
             "[[1 2 3 4]\n",
             " [5 6 7 8]]\n",
-            "[[7 8]\n",
-            " [2 3]]\n"
+            "[7 8] [2 3]\n"
           ],
           "name": "stdout"
         }
@@ -515,14 +517,14 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8ab07132-016f-4495-f385-80a2da2e898c"
+        "outputId": "5d21fabf-acb1-4983-bfb1-a6c8899dee4c"
       },
       "source": [
         "scores = np.array([26,25,15,22,30])\n",
         "percentages = scores / 30 * 100\n",
         "print(percentages)"
       ],
-      "execution_count": 42,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -561,7 +563,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "64e2aa75-5d6a-47da-c0ad-4810574ee94c"
+        "outputId": "6c1323cd-b355-43fc-d5ba-9c8448f53309"
       },
       "source": [
         "def increase_array():\n",
@@ -571,7 +573,7 @@
         "\n",
         "increase_array()"
       ],
-      "execution_count": 43,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -653,7 +655,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a9a6b0e0-6faf-4b68-e6e1-b5d5fbc06a4e"
+        "outputId": "769bcc5a-6603-4364-c977-939845a7079f"
       },
       "source": [
         "def create_array():\n",
@@ -668,7 +670,7 @@
         "\n",
         "create_array()"
       ],
-      "execution_count": 48,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -729,12 +731,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c886c117-0c3d-4715-f49c-3e4346439c3a"
+        "outputId": "3dd549e4-d20c-4d6f-b5d0-84cdd4022eb9"
       },
       "source": [
         "def numpy_mask():\n",
         "  array1 = np.zeros((8,8), dtype=\"int32\")\n",
         "  array1[3:5, 3:5] = 1\n",
+        "  print(array1)\n",
         "  array1[0, 0] = 1\n",
         "  array1[0, -1] = 1\n",
         "  array1[-1, 0] = 1\n",
@@ -743,11 +746,19 @@
         "\n",
         "numpy_mask()"
       ],
-      "execution_count": 56,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
+            "[[0 0 0 0 0 0 0 0]\n",
+            " [0 0 0 0 0 0 0 0]\n",
+            " [0 0 0 0 0 0 0 0]\n",
+            " [0 0 0 1 1 0 0 0]\n",
+            " [0 0 0 1 1 0 0 0]\n",
+            " [0 0 0 0 0 0 0 0]\n",
+            " [0 0 0 0 0 0 0 0]\n",
+            " [0 0 0 0 0 0 0 0]]\n",
             "[[1 0 0 0 0 0 0 1]\n",
             " [0 0 0 0 0 0 0 0]\n",
             " [0 0 0 0 0 0 0 0]\n",
@@ -769,7 +780,7 @@
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     }
   ]
